Bug 13633 - [bisected] No sound on HDA Intel (ALC268)
Summary: [bisected] No sound on HDA Intel (ALC268)
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Takashi Iwai
URL:
Keywords:
Depends on:
Blocks: 13615
  Show dependency tree
 
Reported: 2009-06-27 04:42 UTC by Brian Rogers
Modified: 2009-06-30 12:35 UTC (History)
3 users (show)

See Also:
Kernel Version: v2.6.31-rc1-114-g4075ea8
Tree: Mainline
Subsystem:
Regression: Yes


Attachments
alsa-info before the problem commit (19.37 KB, text/plain)
2009-06-29 09:48 UTC, Brian Rogers
Details
Add missing initializations for ALC268 and ALC269 (1.30 KB, patch)
2009-06-29 09:49 UTC, Takashi Iwai
Details | Diff
alsa-info with the problem commit (19.36 KB, text/plain)
2009-06-29 09:49 UTC, Brian Rogers
Details

Description Brian Rogers 2009-06-27 04:42:03 UTC
With a recent kernel, my laptop no longer produces sound from the speakers or the headphone jack. I have made sure all mixer controls are turned up and unmuted. I bisected the problem to the following commit:

commit 4a79ba34cada6a5a4ee86ed53aa8a73ba1e6fc51
Author: Takashi Iwai <tiwai@suse.de>
Date:   Wed Apr 22 16:31:35 2009 +0200

    ALSA: hda - Add amp initialization for realtek auto mode

    In the realtek auto-probing mode, the initialization of amp with
    some magic COEF or EAPD verbs is applied only when the codec SSID
    has valid values to satisfy the realtek's definition.
    However, many devices don't provide in that way, thus the device
    doesn't work as is.

    This patch allows the same initialization code even if the SSID
    doesn't pass the bit test.  Also, alc_subsystem_id() is changed
    just to check and define the type, so that it's called in the
    parser, instead of the initializer.

    Signed-off-by: Takashi Iwai <tiwai@suse.de>

Here is my audio device:
00:1b.0 Audio device [0403]: Intel Corporation 82801H (ICH8 Family) HD Audio Controller [8086:284b] (rev 03)
Comment 1 Andrew Morton 2009-06-27 06:16:44 UTC
Thanks for bisecting.

If the bug was caused by 4a79ba34cada6a5a4ee86ed53aa8a73ba1e6fc51 then it must
be a post-2.6.30 regression?  I'll mark it as a regression.
Comment 2 Brian Rogers 2009-06-27 06:17:47 UTC
Correct. 2.6.30 has working sound.
Comment 3 Takashi Iwai 2009-06-29 06:27:57 UTC
So, reverting that commit fixes the problem?

Could you run alsa-info.sh with --no-upload option on both working and non-working kernels, and attach the generated files here?  The script is found at
    http://www.alsa-project.org/alsa-info.sh

Thanks.
Comment 4 Brian Rogers 2009-06-29 08:44:05 UTC
That commit does not revert cleanly in the latest kernel, but I did double-check a build of the identified commit and its parent to make sure I didn't simply make a wrong turn while bisecting.

I'm rebuilding that kernel version now so I can get data from that script right before and after that commit.
Comment 5 Takashi Iwai 2009-06-29 09:48:33 UTC
I think I found the culprit.  Try the patch below.
Comment 6 Brian Rogers 2009-06-29 09:48:53 UTC
Created attachment 22138 [details]
alsa-info before the problem commit
Comment 7 Takashi Iwai 2009-06-29 09:49:13 UTC
Created attachment 22139 [details]
Add missing initializations for ALC268 and ALC269
Comment 8 Brian Rogers 2009-06-29 09:49:32 UTC
Created attachment 22140 [details]
alsa-info with the problem commit
Comment 9 Takashi Iwai 2009-06-29 09:50:43 UTC
FYI, the patch is already in sound git tree, either master or for-next branch.
  git://git.kernel.org/pub/scm/linux/kernel/git/tiwai/sound-2.6.git
Comment 10 Brian Rogers 2009-06-29 10:06:30 UTC
I just tried your patch on top of the latest kernel. Problem solved!
Comment 11 Brian Rogers 2009-06-29 10:34:18 UTC
BTW, I don't see the patch in that git tree... Perhaps you didn't push yet?
Comment 12 Takashi Iwai 2009-06-29 10:58:47 UTC
Good to hear.

The patch is already there.  Maybe just a matter of sync.
Comment 13 Rafael J. Wysocki 2009-06-29 23:28:40 UTC
On Monday 29 June 2009, Brian Rogers wrote:
> Rafael J. Wysocki wrote:
> > This message has been generated automatically as a part of a report
> > of recent regressions.
> >
> > The following bug entry is on the current list of known regressions
> > from 2.6.30.  Please verify if it still should be listed and let me know
> > (either way).
> >
> >
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=13633
> > Subject             : [bisected] No sound on HDA Intel (ALC268)
> > Submitter   : Brian Rogers <brian@xyzw.org>
> > Date                : 2009-06-27 04:42 (2 days old)
> >   
> 
> Yes, this is still a current issue in mainline and a regression from 2.6.30.
Comment 14 Takashi Iwai 2009-06-30 05:54:03 UTC
The patch is merged to the upstream now.
Comment 15 Rafael J. Wysocki 2009-06-30 12:35:26 UTC
Fixed by commit 1d955ebd4db7961dc4e772a23288b3d5c6f191be .

Note You need to log in before you can comment on or make changes to this bug.